<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/infoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoTitleText"
        android:textAlignment="center" />

    <TextView
        android:text="@string/resumeSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resumeSite" />

    <TextView
        android:text="@string/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance" />

    <Button
        android:text="@string/markerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/markerButton" />

</LinearLayout>