<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/addNewSiteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AddNewSite"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/newSiteTitleEdit"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newSiteTitleEdit"
            android:hint="@string/newSiteTitleEdit" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/adressTV"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/adressEdit"
            android:layout_weight="1"
            android:hint="@string/adressEdit" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/resumeTV"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/resumeEdit"
            android:layout_weight="1"
            android:hint="@string/resumeEdit" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/categTV"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categSpinner"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/validateNewSiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/validateNewSiteButton"
            android:layout_weight="1" />

        <Button
            android:text="@string/annulationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/annulationButton"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>